--- a/package.json
+++ b/package.json
@@ -1,7 +1,14 @@
 {
   "name": "fideo",
-  "version": "1.0.0",
+  "version": "1.1.0",
   "description": "Fideo - File2Video & Video2File",
+  "keywords": [
+    "file-to-video",
+    "video-to-file",
+    "encoder",
+    "decoder",
+    "cli"
+  ],
   "bin": {
     "f2v": "./dist/bin/f2v.js",
     "v2f": "./dist/bin/v2f.js"
@@ -17,10 +24,11 @@
     "@ffmpeg-installer/ffmpeg": "^1.1.0",
     "@ffprobe-installer/ffprobe": "^1.4.1",
     "chalk": "^4.1.2",
-    "commander": "^13.1.0",
-    "ora": "^8.0.1"
+    "cli-progress": "^3.12.0",
+    "commander": "^13.1.0"
   },
   "devDependencies": {
+    "@types/cli-progress": "^3.11.6",
     "@types/node": "^22.19.1",
     "typescript": "^5.9.3"
   }
