--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -23,7 +23,7 @@ jobs:
           registry-url: 'https://registry.npmjs.org'
 
       - name: dependencies install
-        run: npm ci
+        run: npm install
 
       - name: package build
         run: npm run build
